--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,6 +1,6 @@
 .l-header {
 	border-bottom: 1px solid $cGray;
-	@include mq(sm) {
+	@include mq(md) {
 		position: fixed;
 		top: 0;
 		left: 0;
@@ -29,11 +29,18 @@
 	&__logo {
 		width: 33.1rem;
 		height: auto;
+		@include mq(md) {
+			width: 43rem;
+		}
 		@include mq(sm) {
 			width: 24.8rem;
 		}
 		&__link {
 			display: block;
+			transition: all 0.3s;
+			&:hover {
+				opacity: 0.7;
+			}
 		}
 	}
 	&-right {
@@ -75,6 +82,169 @@
 					transition: all 0.3s;
 					&:hover {
 						opacity: 0.7;
+					}
+				}
+			}
+		}
+	}
+	/**
+	* ハンバーガーメニュー
+	*/
+	&-hamburger {
+		display: none;
+		position: relative;
+		@include mq(md) {
+			display: block;
+			width: 4rem;
+			height: 3.2rem;
+		}
+		@include mq(sm) {
+			width: 2rem;
+			height: 1.6rem;
+		}
+		& span {
+			height: 2px;
+			width: 100%;
+			display: block;
+			background-color: #0D9A90;
+			position: absolute;
+			&:first-child {
+				top: 0;
+			}
+			&:nth-child(2) {
+				top: 50%;
+				transform: translateY(-50%);
+			}
+			&:last-child {
+				bottom: 0;
+			}
+		}
+		&.is-open {
+			& span {
+				&:first-child {
+					top: 50%;
+					left: 50%;
+					transform: translate(-50%,-50%) rotate(45deg);
+				}
+				&:nth-child(2) {
+					opacity: 0;
+				}
+				&:last-child {
+					top: 50%;
+					left: 50%;
+					transform: translate(-50%,-50%) rotate(-45deg);
+				}
+			}
+		}
+	}
+	/**
+	* モーダルメニュー
+	*/
+	&-modal {
+		display: none;
+		background-color: $cWhite;
+		box-sizing: border-box;
+		padding-top: 7.4vh;
+		&.is-open {
+			display: block;
+		}
+		@include mq(md) {
+			height: calc(100vh - 13rem);
+		}
+		@include mq(sm) {
+			height: calc(100vh - 6rem);
+		}
+		&-container {
+			@include mq(md) {
+				width: 56rem;
+				margin: 0 auto;
+			}
+			@include mq(sm) {
+				width: 28.7rem;
+			}
+		}
+		&-list {
+			@include mq(md) {
+				margin-bottom: 8rem;
+			}
+			@include mq(sm) {
+				margin-bottom: 4rem;
+			}
+			&-item {
+				@include mq(md) {
+					margin-bottom: 4rem;
+				}
+				@include mq(sm) {
+					margin-bottom: 2rem;
+				}
+				&:last-child {
+					margin-bottom: 0;
+				}
+				&__link {
+					line-height: 1.5;
+					color: $cBlack;
+					letter-spacing: 0.03em;
+					@include mq(md) {
+						font-size: 4rem;
+					}
+					@include mq(sm) {
+						font-size: 1.6rem;
+					}
+				}
+			}
+		}
+		&-ex {
+			@include mq(md) {
+				margin-top: 8rem;
+			}
+			@include mq(sm) {
+				margin-top: 4rem;
+			}
+			&-item {
+				&:first-child {
+					@include mq(md) {
+						margin-bottom: 2rem;
+					}
+					@include mq(sm) {
+						margin-bottom: 1rem;
+					}
+				}
+				&__link {
+					position: relative;
+					font-weight: 400;
+					line-height: 1.42;
+					letter-spacing: 0.03em;
+					transition: all 0.3s;
+					color: #848484;
+					@include mq(md) {
+						font-size: 3.8rem;
+					}
+					@include mq(sm) {
+						font-size: 1.4rem;
+					}
+					&:hover {
+						opacity: 0.7;
+					}
+					&__icon {
+						position: absolute;
+						height: auto;
+						left: 0;
+						top: 50%;
+						transform: translateY(-50%);
+						@include mq(md) {
+							width: 3rem;
+						}
+						@include mq(sm) {
+							width: 1.318rem;
+						}
+					}
+					&__txt {
+						@include mq(md) {
+							padding-left: 4rem;
+						}
+						@include mq(sm) {
+							padding-left: 2.2rem;
+						}
 					}
 				}
 			}
