--- a/assets/scss/project/_thanks.scss
+++ b/assets/scss/project/_thanks.scss
@@ -1,2 +1,89 @@
 @import '../foundation/variables';
 @import '../foundation/mixin';
+
+.p-thanks {
+	&-container {
+		padding-top: 18rem;
+		padding-bottom: 12rem;
+		font-size: 1.6rem;
+		font-weight: 400;
+		font-family: 'Noto Sans JP', sans-serif;
+		line-height: 2;
+		letter-spacing: 0.03em;
+		color: $cBlack;
+		@include mq(sm) {
+			padding-top: 12rem;
+			font-size: 1.4rem;
+			line-height: 1.7;
+		}
+	}
+	&__top {
+		text-align: center;
+		margin-bottom: 6rem;
+	}
+	&__txt {
+		width: 57rem;
+		margin: 0 auto 6rem;
+		@include mq(sm) {
+			width: 33.5rem;
+		}
+	}
+	&-bottom {
+		padding: 6rem 0;
+		padding-left: 10.3rem;
+		box-sizing: border-box;
+		width: 76.4rem;
+		background-color: #F4F8F8;
+		margin: 0 auto 4rem;
+		@include mq(sm) {
+			width: 100%;
+			padding: 5rem 0;
+			margin-bottom: 3rem;
+		}
+		&__top {
+			margin-bottom: 3rem;
+			@include mq(sm) {
+				width: 33.5rem;
+				margin: 0 auto 3rem;
+			}
+		}
+		&__items {
+			font-size: 1.4rem;
+			line-height: 2.2;
+			margin-bottom: 3rem;
+			@include mq(sm) {
+				width: 33.5rem;
+				margin: 0 auto 3rem;
+				line-height: 1.7;
+			}
+		}	
+		&__caution {
+			color: #E02424;
+			@include mq(sm) {
+				width: 33.5rem;
+				margin: 0 auto;
+			}
+		}
+	}
+	&__back {
+		line-height: 2.4rem;
+		color: #848484;
+		margin: 0 auto;
+		width: 7.5rem;
+		display: flex;
+		justify-content: space-between;
+		transition: all 0.3s;
+		cursor: pointer;
+		@include mq(sm) {
+			font-size: 1.4rem;
+			line-height: 2rem;
+			width: 6.3rem;
+		}
+		&__txt {
+			border-bottom: 1px solid #848484;
+		}
+		&:hover {
+			opacity: 0.7;
+		}
+	}
+}
