--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -7,7 +7,8 @@
 
 @import './layout/header';
 @import './layout/footer';
-@import './layout/form';
+@import './layout/contact';
+@import './layout/loading';
 
 @import './project/index';
 @import './project/thanks';
@@ -17,3 +18,5 @@
 @import './component/number';
 @import './component/diagonalBg';
 @import './component/modalBtn';
+@import './component/bottomBtn';
+@import './component/progress';
