--- a/assets/scss/project/_thanks.scss
+++ b/assets/scss/project/_thanks.scss
@@ -24,6 +24,9 @@
 	&__txt {
 		width: 57rem;
 		margin: 0 auto 6rem;
+		@include mq(md) {
+			width: 70rem;
+		}
 		@include mq(sm) {
 			width: 33.5rem;
 		}
@@ -35,6 +38,9 @@
 		width: 76.4rem;
 		background-color: #F4F8F8;
 		margin: 0 auto 4rem;
+		@include mq(md) {
+			width: 95rem;
+		}
 		@include mq(sm) {
 			width: 100%;
 			padding: 5rem 0;
@@ -74,6 +80,9 @@
 		justify-content: space-between;
 		transition: all 0.3s;
 		cursor: pointer;
+		@include mq(md) {
+			width: 10rem;
+		}
 		@include mq(sm) {
 			font-size: 1.4rem;
 			line-height: 2rem;
