--- a/assets/scss/layout/_contact.scss
+++ b/assets/scss/layout/_contact.scss
@@ -49,29 +49,34 @@
 			}
 			&__body {
 				width: 70%;
+				position: relative;
 				@include mq(sm) {
 					width: 100%;
 				}
 				&__input {
 					box-sizing: border-box;
 					width: 100%;
-					padding: 1.3rem 2rem;
+					padding: 0 2rem;
 					font-size: 1.6rem;
-					line-height: 1.875;
+					box-sizing: border-box;
+					height: 5rem;
 					letter-spacing: 0.03em;
 					color: $cBlack;
 					border: 1px solid $cGray;
 					background-color: #FDFDFD;
 					font-weight: 400;
 					font-family: 'Noto Sans JP', sans-serif;
+					line-height: 5rem;
+					@include mq(sm) {
+						font-size: 1.4rem;
+						height: 4.8rem;
+						line-height: 4.8rem;
+					}
 					&.--readonly {
 						border: none;
 						background-color: transparent;
 						outline: none;
-					}
-					@include mq(sm) {
-						font-size: 1.4rem;
-						line-height: 2.14;
+						color: #777777;
 					}
 					&.--age {
 						width: 5.8rem;
@@ -88,6 +93,19 @@
 						color: #A3A3A3;
 						font-weight: 400;
 						font-family: 'Noto Sans JP', sans-serif;
+					}
+				}
+				&__unit {
+					font-size: 1.6rem;
+					font-weight: 400;
+					letter-spacing: 0.03em;
+					position: absolute;
+					top: 50%;
+					transform: translateY(-50%);
+					left: 7.2rem;
+					@include mq(sm) {
+						font-size: 1.4rem;
+						left: 6.6rem;
 					}
 				}
 			}
