--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -105,19 +105,32 @@
 		}
 	}
 	&-copyright {
-		height: 4.2rem;
-		text-align: right;
-		color: $cWhite;
-		font-size: 1.2rem;
-		font-weight: 400;
-		line-height: 4.2rem;
-		letter-spacing: 0.02em;
+		width: 100%;
+		box-sizing: border-box;
 		background-color: #00655A;
-		@include mq(sm) {
-			font-size: 1rem;
-			line-height: 4.4rem;
-			height: 4.4rem;
-			text-align: center;
+		&-container {
+			width: calc(1030/1280 * 100%);
+			margin: 0 auto;
+			max-width: 115rem;
+			height: 4.2rem;
+			text-align: right;
+			color: $cWhite;
+			@include mq(md) {
+				width: 100%;
+				text-align: center;
+			}
+			@include mq(sm) {
+				width: 100%;
+			}
+		}
+		&__txt {
+			font-size: 1.2rem;
+			font-weight: 400;
+			line-height: 4.2rem;
+			letter-spacing: 0.02em;
+			@include mq(sm) {
+				line-height: 4.4rem;
+			}
 		}
 	}
 }
