--- a/assets/scss/project/_index.scss
+++ b/assets/scss/project/_index.scss
@@ -65,6 +65,13 @@
 		}
 		&-left {
 			width: calc(500/1280 * 100%);
+			transform: trnaslateY(-10rem);
+			opacity: 0;
+			transition: all 0.5s ease;
+			&.is-animate {
+				transform: none;
+				opacity: 1;
+			}
 			@include mq(sm) {
 				width: 30rem;
 				margin: 0 auto 5vh;
@@ -183,6 +190,7 @@
 			border-bottom-right-radius: 1rem;
 			display: flex;
 			align-items: center;
+			font-family: 'Noto Sans JP', sans-serif;
 			@include mq(md) {
 				height: 36.8rem;
 			}
@@ -206,6 +214,9 @@
 			letter-spacing: 0.03em;
 			line-height: 2.1;
 			font-weight: 400;
+			@include mq(sm) {
+				line-height: 1.7;
+			}
 		}
 	}
 }
@@ -227,7 +238,9 @@
 		position: relative;
 		box-shadow: 0px 0px 20px rgba(128,128,128,0.16);
 		@include mq(sm) {
-			width: 33.5rem;
+			max-width: 33.5rem;
+			min-width: 28rem;
+			width: calc(335/375 * 100%);
 		}
 		&:after {
 			content: '';
@@ -262,7 +275,6 @@
 		left: 0;
 		right: 0;
 		bottom: 0;
-		background-color: rgba(37,37,37,0.86);
 		align-items: center;
 		justify-content: center;
 		&.is-open {
@@ -276,6 +288,10 @@
 			margin: 0 auto;
 			padding: 0 2rem;
 			height: 58rem;
+			@include mq(sm) {
+				width: 50rem;
+				height: 29rem;
+			}
 			& iframe {
 				display: block;
 				width: 100%;
@@ -365,6 +381,7 @@
 		justify-content: space-between;
 		align-items: center;
 		margin-bottom: 6rem;
+		font-family: 'Noto Sans JP', sans-serif;
 		@include mq(sm) {
 			flex-direction: column;
 			margin-bottom: 3rem;
@@ -449,6 +466,7 @@
 			border-radius: 1rem;
 			position: relative;
 			cursor: pointer;
+			box-shadow: 0px 0px 10px rgba(128,128,128,0.16);
 			@include mq(sm) {
 				width: 100%;
 				height: 30.6rem;
@@ -457,8 +475,11 @@
 				& .p-people {
 					&-item {
 						&-top {
+							&::before {
+								opacity: 0;
+							}
 							&::after {
-								background: rgba(72,191,183,0.2)
+								opacity: 1;
 							}
 							&__arrow {
 								background: linear-gradient(to top left, rgba(0,92,100,1), rgba(21,178,172,1));
@@ -479,10 +500,11 @@
 			width: 100%;
 			height: 28rem;
 			display: block;
+			transition: all 0.5s ease;
 			@include mq(sm) {
 				height: 18.2rem;
 			}
-			&::after {
+			&::before {
 				content: '';
 				position: absolute;
 				display: block;
@@ -492,8 +514,22 @@
 				width: 100%;
 				height: 100%;
 				border-radius: 1rem 1rem 0px 0px;
-				transition: all 0.2s;
 				background: linear-gradient(to right top, rgba(131,225,229,0.68), rgba(134,207,181,0), rgba(141,206,163,0.08), rgba(164,201,104,0.37));
+				transition: all 0.4s cubic-bezier(0.24, 0.79, 0.25, 1);
+			}
+			&::after {
+				content: '';
+				display: block;
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				border-radius: 1rem 1rem 0px 0px;
+				background: rgba(72,191,183,0.2);
+				z-index: 3;
+				opacity: 0;
+				transition: all 0.4s cubic-bezier(0.67, 0.7, 0.48, 0.98);
 			}
 			&__arrow {
 				position: absolute;
@@ -512,13 +548,16 @@
 					display: block;
 					width: 1.5rem;
 					height: 1.1rem;
-					background-image: url(/assets/images/lines.svg);
-					background-size: cover;
 					position: absolute;
 					top: 50%;
 					right: 4.43rem;
 					transition: all .5s cubic-bezier(0.215, 0.61, 0.355, 1);
 					transform: translateY(-50%);
+					& img {
+						position: absolute;
+						width: 100%;
+						height: 100%;
+					}
 					@include mq(sm) {
 						right: 3.3rem;
 					}
@@ -545,6 +584,9 @@
 			background-color: $cWhite;
 			border-bottom-left-radius: 1rem;
 			border-bottom-right-radius: 1rem;
+			@include mq(sm) {
+				height: 12.4rem;
+			}
 		}
 		&__name {
 			margin-bottom: 1rem;
@@ -578,7 +620,6 @@
 			height: 100%;
 			top: 0;
 			left: 0;
-			background-color: rgba(37,37,37,0.86);	
 			z-index: 101;
 			overflow-y: auto;
 			@include mq(sm) {
@@ -633,11 +674,11 @@
 				box-sizing: border-box;
 				padding: 6rem 8rem 8.4rem;
 				margin: 0 auto;
-				pointer-events: none;
 				position: relative;
+				z-index: 2;
 				@include mq(sm) {
+					width: calc(340/375 * 100%);
 					padding: 9.5rem 2rem 8rem;
-					width: 33.5rem;
 				}
 			}
 			&-top {
@@ -662,7 +703,7 @@
 						position: relative;
 						@include mq(sm) {
 							width: 100%;
-							height: 20.4rem;
+							height: auto;
 							margin-bottom: 2rem;
 						}
 						&__txt {
@@ -760,6 +801,9 @@
 								letter-spacing: 0.03em;
 								line-height: 2.14;
 								font-family: 'Noto Sans JP', sans-serif;
+								@include mq(sm) {
+									line-height: 1.71;
+								}
 							}
 						}
 					}
@@ -800,7 +844,7 @@
 					position: relative;
 					@include mq(sm) {
 						width: 100%;
-						height: 19.6rem;
+						height: auto;
 						margin-bottom: 7rem;
 					}
 					&__txt {
@@ -898,6 +942,7 @@
 			font-size: 1.4rem;
 			line-height: 1.71;
 			text-align: left;
+			margin-bottom: 4rem;
 		}
 	}
 	&__content {
