--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -20,3 +20,5 @@
 @import './component/modalBtn';
 @import './component/bottomBtn';
 @import './component/progress';
+@import './component/fadeIn';
+@import './component/modalCover';
