--- a/assets/scss/component/_btn.scss
+++ b/assets/scss/component/_btn.scss
@@ -1,12 +1,25 @@
 .c-btn {
 	position: relative;
 	border-radius: 50vh;
-	background: linear-gradient(rgba(12, 141, 127, 0.97) 0%, #0eada7 100%);
 	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.16);
 	color: $cWhite;
 	box-sizing: border-box;
-	transition: all 0.2s;
 	display: block;
+	background: transparent;
+	overflow: hidden;
+	z-index: 2;
+	&::after {
+		content: '';
+		display: block;
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		right: 0;
+		background: linear-gradient(to bottom right, #2ec6c1, #09897B);
+		transition: all 0.3s ease;
+		z-index: -1;
+	}
 	&.--contact {
 		width: 19rem;
 		height: 5.6rem;
@@ -81,10 +94,12 @@
 	}
 	&:hover {
 		border: 1px solid #0C8D7F;
-		background: transparent;
 		color: #008C7F;
 		& .triangle {
 			border-left: 0.8rem solid #0C8D7F;
+		}
+		&::after {
+			opacity: 0;
 		}
 	}
 }
